feat: add base configuration for resource creation in swagger
